--- a/.env
+++ b/.env
@@ -2,3 +2,5 @@ PORT=3000
 NODE_ENV=development
 REACT_APP_BACKEND_URL=http://localhost:5000
 REACT_APP_ROUTER_BASE_NAME=
+
+PAGINATE_ITEM_PER_PAGE=10
