--- a/.env
+++ b/.env
@@ -3,4 +3,5 @@ NODE_ENV=development
 REACT_APP_BACKEND_URL=http://localhost:5000/api
 REACT_APP_ROUTER_BASE_NAME=
 
-PAGINATE_ITEM_PER_PAGE=10
+PAGINATE_LIMIT=10
+PAGINATE_PAGE=1
