--- a/package.json
+++ b/package.json
@@ -21,11 +21,13 @@
     "normalize.css": "^8.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-modal": "^3.16.1",
     "react-paginate": "^8.2.0",
     "react-redux": "^8.1.2",
     "react-responsive": "^9.0.2",
     "react-router-dom": "^6.15.0",
     "react-scripts": "5.0.1",
+    "react-select": "^5.7.7",
     "redux": "^4.2.1",
     "redux-persist": "^6.0.0",
     "redux-thunk": "^2.4.2",
@@ -34,6 +36,7 @@
   },
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "@types/react-modal": "^3.16.2",
     "sass": "^1.66.1"
   },
   "scripts": {
